[package]
name = "isolate"
version = "0.1.2"
authors = ["Curtis Millar <curtis@curtism.me>"]
description = '''
Command line tool for namespace isolation in linux.
'''
repository = "https://github.com/xurtis/isolate"
keywords = [
	"linux",
	"namespace",
	"container",
]
categories = [
	"command-line-utilities",
	"development-tools",
	"os",
]
license = "ISC"
readme = "README.md"

[dependencies]
unshare = "0.2.0"
docopt = "0.8.3"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
