[package]
name = "isolate"
version = "0.1.2"
authors = ["Curtis Millar <curtis@curtism.me>"]
description = '''
Command line tool for namespace isolation in linux.
'''
repository = "https://github.com/xurtis/isolate"
keywords = [
	"linux",
	"namespace",
	"container",
]
categories = [
	"command-line-utilities",
	"development-tools",
	"os",
]
license = "ISC"
readme = "README.md"

[lib]
name = "isolate"
path = "src/lib.rs"
test = true
doctest = false
doc = true
bench = false

[[bin]]
name = "isolate"
path = "src/main.rs"
test = true
doctest = true
doc = true
bench = false

[dependencies]
unshare = "0.2.0"
docopt = "0.8.3"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
error-chain = "0.11.0"
libc = "0.2"
errno = "0.2.3"
